# Study

agents/compare_response/: graph.py  nodes.py  pyproject.toml  states.py  utils.py
agents/nomadcoder/: .gitignore
agents/nomadcoder/CHATGPT-CLONE/: ai-memory.db  ai-memory.db-shm  ai-memory.db-wal  chat-gpt-clone-memory.db  dummy-agent.ipynb  main.py  pyproject.toml
agents/nomadcoder/CONTENT-PIPELINE-AGENT/: crewai_flow.html  main.py  pyproject.toml  seo_crew.py  tools.py
agents/nomadcoder/CUSTOMER-SUPPORT-AGENT/: customer-support-memory.db  main.py  models.py  output_guardrails.py  pyproject.toml  workflow.py
agents/nomadcoder/CUSTOMER-SUPPORT-AGENT/my_agents/: account_agent.py  billing_agent.py  order_agent.py  technical_agent.py  triage_agent.py
agents/nomadcoder/DEPLOYMENT/: api.http  main.py  pyproject.toml  railway.json
agents/nomadcoder/HELLO-LANGGRAPH/: langgraph.db-shm  langgraph.db-wal  langgraph.json  main.ipynb  main.py  memory.db-shm  memory.db-wal  pyproject.toml
agents/nomadcoder/JOB-HUNTER-AGENT/: main.py  models.py  pyproject.toml  tools.py
agents/nomadcoder/MULTI-AGENT-ARCHITECTURES/: graph.py  langgraph.json  main.ipynb
agents/nomadcoder/MY-FIRST-AGENT/: main.ipynb  pyproject.toml
agents/nomadcoder/NEWS-READER-AGENT/: main.py  pyproject.toml  (+1 more)
agents/yoon/: .gitignore
agents/yoon/2.NEW_AGENT/: TDD.md  bot.py  bot2.py  news_crew.py  pyproject.toml  tools.py
agents/yoon/2.NEW_AGENT/output/: final_news_report.txt
agents/yoon/3.FUND_MANAGER_AGENT/: env.py  main.py  my_first_flow.py  pyproject.toml  tools.py
aws/bedrock/AgentCore/: .bedrock_agentcore.yaml  .gitignore  Dockerfile  Dockerfile.mcp  Dockerfile.without_starter_toolkit  README.md  agent_core.py  agent_core_with_starter_toolkit.py  agent_core_without_starter_toolkit.py  custom_langgraph.py  deploy.py  deploy_agent_core.py  deploy_mcp.py  mcp_client.py  mcp_server.py  pyproject.toml  requirements.txt  setup_congnito.sh
aws/bedrock/AgentCore/agent_core/: Dockerfile.mcp  Dockerfile.runtime  READEME.md  a2a.http  a2a_client.py  a2a_deploy.py  a2a_server_langgraph.py  make_auth.py  make_iam.py  mcp_client.py  runtime.py  runtime_deploy.py  runtime_with_mcp.py
aws/bedrock/AgentCore/agent_core/mcp/: gateway.py  utils.py
aws/bedrock/AgentCore/basic_agent/: langgraph_agent.py  langgraph_with_memory_agent.py  langgraph_with_tools_agent.py  tools.py
langchain/kang/: .gitignore  1.langchain_vs_langgraph.ipynb  2.basic_retriever_agent.ipynb  3.2_tools_intro.ipynb  3.3_langgraph_tools.ipynb  3.4_langgraph_internal_tools.ipynb  3.5-chat-history.ipynb  3.6-human-in-the-loop.ipynb  3.7-stock-multi-agent.ipynb  README.md  pyproject.toml
langchain/kang/income_tax_collection/: chroma.sqlite3
langchain/teddy/: Dockerfile  README.md  docker-compose.yaml
langchain/test/: pyproject.toml
mcp/langchain/: .gitignore  main.py  pyproject.toml
reactnative/zerocho/: README.md  docker-compose.yaml
vibe_coding/claude_code/: 1.Basic.md  2.Customizing.md  mvp-design-지역여행계획플래너.md
(+123 files in other folders)
